# SEA-ME-Project-2

./: .gitignore  README.md
Server/: CMakeLists.txt  code_generate.sh  index.md
Server/ServerApp/: ServerApp.pro  cansocket.h  datamanager.cpp  datamanager.h  main.cpp
Server/cgen/commonapi_dbus_generator/: artifacts.xml
Server/cgen/commonapi_dbus_generator/configuration/: config.ini
Server/fidl/: CANData.fidl  HelloWorld.fidl
Server/includes/: CANSocket.hpp  IPCServer.hpp  raspi-can.h  utils.h
Server/libraries/dbus-1.10.10/: Doxyfile  Makefile  Makefile.in  config.h  config.status  configure  dbus-1-uninstalled.pc  dbus-1.pc  libtool
Server/libraries/dbus-1.10.10/bus/: Makefile  dbus-daemon  dbus-daemon-launch-helper  system.conf
Server/libraries/dbus-1.10.10/dbus/: Makefile  Version  dbus-asv-util.lo  dbus-auth-script.lo  dbus-auth-util.lo  dbus-connection.c  dbus-credentials-util.lo  dbus-mainloop.lo  dbus-marshal-byteswap-util.lo  dbus-marshal-recursive-util.lo  dbus-marshal-validate-util.lo  dbus-message-factory.lo  dbus-message-util.lo  dbus-message.c  dbus-shell.lo  dbus-socket-set-epoll.lo  dbus-socket-set-poll.lo  dbus-socket-set.lo  dbus-spawn.lo  dbus-string-util.lo  dbus-string.h  dbus-sysdeps-util-unix.lo  dbus-sysdeps-util.lo  dbus-test.lo  dbus-userdb-util.lo  libdbus-1.la  libdbus-internal.la  libdbus_1_la-dbus-address.lo  libdbus_1_la-dbus-auth.lo  libdbus_1_la-dbus-bus.lo  libdbus_1_la-dbus-errors.lo  (+44 more)
Server/srcs/: CANSocket.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  IPCClient.cpp  IPCServer.cpp  main.cpp  raspi-can.cpp  utils.cpp
(+742 files in other folders)
